# OpenGLEngine

./: CMakeLists.txt  README.md
Boring/: ASDLoader.cpp  ASDLoader.h  AnimatedMesh.cpp  AnimatedMesh.h  AnimatedMeshRenderer.cpp  AnimatedMeshRenderer.h  AnimatedShader.cpp  AnimatedShader.h  AnimatedTransformationSystem.cpp  AnimatedTransformationSystem.h  Animation.cpp  Animation.h  BillBoard.cpp  BillBoard.h  Bone.h  Boring.vcxproj  Boring.vcxproj.filters  BoundingBoxRenderer.cpp  BoundingBoxRenderer.h  ClothSystem.cpp  ClothSystem.h  CombineFilter.cpp  CombineFilter.h  CustomInstanceRenderer.cpp  CustomInstanceRenderer.h  CustomRenderSystem.cpp  CustomRenderSystem.h  DataTypes.h  EmptyRenderer.cpp  EmptyRenderer.h  EntityHandler.cpp  EntityHandler.h  FrameBuffer.cpp  FrameBuffer.h  GuiRenderSystem.cpp  GuiRenderSystem.h  Input.cpp  Input.h  InstanceRenderSystem.cpp  InstanceRenderSystem.h  (+54 more)
Boring/Debug/: vc141.idb
Boring/Debug/Boring.tlog/: Boring.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Boring/animations/: idle.asd
Boring/shaders/: Hblur.fs  Hblur.vs  Vblur.vs  animatedshadow.vs  animation.vs  background.vs  billboard.fs  billboard.vs  bloom.fs  bounding.fs  bounding.vs  cloth.fs  cloth.vs  combine.fs  comic.fs  default.fs  default.vs  gui.fs  gui.vs  instance.fs  instance.vs  particle.fs  particle.vs  post.fs  shader.fs  shader.vs  shadowShader.fs  shadowShader.vs
Boring/x64/Debug/: Boring.exe.recipe  vc142.idb
Boring/x64/Debug/Boring.tlog/: Boring.lastbuildstate  (+6 more)
(+4 files in other folders)
